<resources>
    <string name="app_name">Septik</string>
    <string name="action_settings">Settings</string>
    <string name="current_state_fragment_label">Septik</string>
    <string name="action_addEmptyDate">Vývoz</string>
    <string name="action_addState">Stav</string>
    <string name="last_empty_date">Poslední vývoz</string>
    <string name="filling_speed">Rychlost plnění</string>
    <string name="capacity">Kapacita</string>
    <string name="fullness_estimate">Odhad naplnění</string>
    <string name="not_available">N/A</string>
    <string name="state_format">%.04fm³</string>
    <string name="state_percent_format">%d%%</string>
    <string name="capacity_format">%d dní</string>
    <string name="filling_speed_format">%.04fm³/den</string>
    <string name="format_water_price">%.02fKč/m³</string>
    <string name="state">Stav:</string>
    <string name="title_state">Stav</string>
    <string name="title_costs">Náklady</string>
    <string name="title_settings">Nastavení</string>
    <string name="title_empting">Vyvážení</string>
    <string name="label_empty_per_year">Vývozů ročně:</string>
    <string name="label_empting_price">Cena za vývoz:</string>
    <string name="label_empting_price_per_year">Cena ročně:</string>
    <string name="label_empting_price_per_month">Měsíční záloha:</string>
    <string name="price_format">%.02fKč</string>
    <string name="title_water_consumption">Spotřeba vody</string>
    <string name="label_consumption_per_day">Denní spotřeba:</string>
    <string name="label_water_price">Cena za 1m³:</string>

    <!-- Preference Keyss -->
    <string name="preference_key_volume">volume</string>
    <string name="preference_key_water_price">water_price</string>
    <string name="preference_key_empting_price">empting_price</string>

    <!-- Preference Titles -->
    <string name="septik_header">Septik</string>
    <string name="costs_header">Spotřeba a náklady</string>

    <!-- Septik Preferences -->
    <string name="volume_title">Kapacita</string>
    <string name="reply_title">Default reply action</string>

    <!-- Costs Preferences -->
    <string name="water_price_title">Vodné</string>
    <string name="empting_price_title">Cena za vývoz</string>
    <string name="preference_key_filling_estimation_interval">filling_estimation_interval</string>
    <string name="filling_estimation_interval_title">Počet dní pro odhad naplnění</string>
    <string name="preference_key_costs_estimation_interval">costs_estimation_interval</string>
    <string name="costs_estimation_interval_title">Počet dní pro odhad spotřeby a nákladů</string>

</resources>