<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/septik_header">

        <EditTextPreference
                app:key="@string/preference_key_volume"
                app:title="@string/volume_title"
                app:useSimpleSummaryProvider="true" app:defaultValue="11"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/costs_header">

        <EditTextPreference
                app:key="@string/preference_key_water_price"
                app:title="@string/water_price_title"
                app:useSimpleSummaryProvider="true" app:defaultValue="50,5" android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditTextPreference
                app:key="@string/preference_key_empting_price"
                app:title="@string/empting_price_title"
                app:useSimpleSummaryProvider="true" app:defaultValue="2475" android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </PreferenceCategory>

</PreferenceScreen>