<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_state">

    <fragment
            android:id="@+id/navigation_state"
            android:name="com.github.mat127.septik.ui.CurrentStateFragment"
            android:label="@string/title_state"
            tools:layout="@layout/fragment_current_state"/>

    <fragment
        android:id="@+id/navigation_costs"
        android:name="com.github.mat127.septik.ui.costs.CostsFragment"
        android:label="@string/title_costs"
        tools:layout="@layout/fragment_costs" />

    <fragment
            android:id="@+id/navigation_settings"
            android:name="com.github.mat127.septik.ui.settings.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings"/>
</navigation>