<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".ui.StatsFragment" android:background="@drawable/round_rect_shape" android:padding="8dp">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tableLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/last_empty_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
            <TextView
                    android:text="4.1.2023"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/text_view_last_empty_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center_vertical|end" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/filling_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
            <TextView
                    android:text="0.321 m³/den"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textViewFillingSpeed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center_vertical|end" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
            <TextView
                    android:text="28 dní"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView_capacity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_weight="1" android:gravity="center_vertical|end"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/fullness_estimate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
            <TextView
                    android:text="5.23m³"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView_fullness"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_weight="1" android:gravity="center_vertical|end"/>
        </TableRow>
    </TableLayout>
</FrameLayout>